--- a/CryptoApp/app/build.gradle
+++ b/CryptoApp/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     def glide_version = "4.14.2"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
