--- a/CryptoApp/app/build.gradle
+++ b/CryptoApp/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation "androidx.fragment:fragment-ktx:1.5.4"
 }
